Add CSS, minor style changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Snakes in Space</title>
 		<script src="phaser.min.js"></script>
      	<script src = "game.js"></script>
+     	<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 	</body>
